--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
   margin: auto;
   margin-top: 80px;
   border-radius: 20px;
-  /* position: relative; */
 }
 .head {
   text-align: center;
@@ -15,6 +14,9 @@
 .chat {
   height: 389px;
   width: 350px;
+  /* padding: 0px;
+  margin: 0px;
+  border:2px */
 }
 .inp {
   width: 73%;
@@ -36,14 +38,12 @@
 }
 .right {
   list-style: none;
-  /* background-color: rgb(231, 222, 204); */
   text-align: right;
   padding: 5px;
 }
 .left {
   list-style: none;
   text-align: left;
-  /* background-color: rgb(231, 222, 204); */
   padding: 5px;
 }
 
