--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .wrapper {
   width: 350px;
   height: 500px;
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   margin: auto;
-  margin-top: 80px;
+  /* margin-top: 80px; */
   border-radius: 20px;
 }
 .head {
