--- a/style.css
+++ b/style.css
@@ -1,62 +1,32 @@
-.wrapper {
-  width: 350px;
-  height: 500px;
-  /* background-color: antiquewhite; */
-  margin: auto;
-  /* margin-top: 80px; */
-  border-radius: 20px;
+body,html{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
-.head {
-  text-align: center;
-  background-color: burlywood;
-  border-radius: 20px 20px 0px 0px;
+
+body{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-image: linear-gradient(160deg,#dddbd1,#d2dbdc);
+ 
 }
-.chat {
-  height: 389px;
-  width: 350px;
-  margin: 0px;
+
+.chatbox{
+  
+  height: 93%;
+  margin-top: 20px;
+  box-shadow: 2px 2px gray;
+  padding: 0px;
 }
-.inp {
-  width: 73%;
+.profile-pic{
+  width: 40px;
   height: 40px;
-  border-style: none;
-  background-color: rgb(231, 222, 204);
-  border-radius: 0px 0px 20px 20px;
-  padding-left: 10px;
 }
-.btn {
-  border-style: none;
-  height: 35px;
-  width: 20%;
-  border-radius: 20px;
+.name{
+  font-weight: 400;
+  color: #000;
 }
-.message {
-  background-color: rgb(231, 222, 204);
-  border-radius: 0px 0px 20px 20px;
+.under-name{
+  font-size: 12px;
 }
-.right {
-  /* list-style: none; */
-  text-align: right;
-  padding: 5px;
-}
-.left {
-  /* list-style: none; */
-  text-align: left;
-  padding: 5px;
-}
-
-.hello {
-  background-color: #0bceaf;
-  font-size: 18px;
-  line-height: 20px;
-  padding: 5px 20px;
-  border-radius: 20px 20px 20px 20px;
-}
-ul li {
-  padding: 10px;
-  margin: 0%;
-}
-/* .content{
-  list-style-;
-
-} */
